etapa2/parser.output
Terminals unused in grammar

    TK_PR_INT
    TK_PR_FLOAT
    TK_PR_BOOL
    TK_PR_CHAR
    TK_PR_STRING
    TK_PR_IF
    TK_PR_THEN
    TK_PR_ELSE
    TK_PR_WHILE
    TK_PR_DO
    TK_PR_INPUT
    TK_PR_OUTPUT
    TK_PR_RETURN
    TK_PR_CONST
    TK_PR_STATIC
    TK_PR_FOREACH
    TK_PR_FOR
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_BREAK
    TK_PR_CONTINUE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TK_OC_SL
    TK_OC_SR
    TOKEN_ERRO


State 36 conflicts: 3 shift/reduce
State 37 conflicts: 3 shift/reduce
State 38 conflicts: 3 shift/reduce
State 39 conflicts: 3 shift/reduce
State 40 conflicts: 15 shift/reduce
State 41 conflicts: 15 shift/reduce
State 42 conflicts: 3 shift/reduce
State 43 conflicts: 3 shift/reduce
State 44 conflicts: 3 shift/reduce
State 45 conflicts: 3 shift/reduce
State 46 conflicts: 3 shift/reduce
State 47 conflicts: 3 shift/reduce
State 48 conflicts: 3 shift/reduce
State 49 conflicts: 3 shift/reduce
State 56 conflicts: 15 shift/reduce


Grammar

    0 $accept: argumento $end

    1 argumento: expressao

    2 argumentos: argumento ',' argumentos
    3           | argumento

    4 lista_argumentos: argumentos
    5                 | %empty

    6 literal: TK_LIT_CHAR
    7        | TK_LIT_STRING
    8        | TK_LIT_TRUE
    9        | TK_LIT_FALSE
   10        | TK_LIT_FLOAT
   11        | TK_LIT_INT

   12 expressao: literal
   13          | '(' expressao ')'
   14          | TK_IDENTIFICADOR
   15          | TK_IDENTIFICADOR '[' expressao ']'
   16          | TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | expressao '+' expressao
   18          | expressao '-' expressao
   19          | expressao '%' expressao
   20          | expressao '*' expressao
   21          | expressao '/' expressao
   22          | expressao '|' expressao
   23          | expressao '&' expressao
   24          | expressao '^' expressao
   25          | expressao TK_OC_LE expressao
   26          | expressao TK_OC_EQ expressao
   27          | expressao TK_OC_GE expressao
   28          | expressao TK_OC_NE expressao
   29          | expressao TK_OC_OR expressao
   30          | expressao TK_OC_AND expressao
   31          | expressao '?' expressao ':' expressao


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 19
    '&' (38) 23
    '(' (40) 13 16
    ')' (41) 13 16
    '*' (42) 20
    '+' (43) 17
    ',' (44) 2
    '-' (45) 18
    '/' (47) 21
    ':' (58) 31
    '?' (63) 31
    '[' (91) 15
    ']' (93) 15
    '^' (94) 24
    '|' (124) 22
    error (256)
    TK_PR_INT (258)
    TK_PR_FLOAT (259)
    TK_PR_BOOL (260)
    TK_PR_CHAR (261)
    TK_PR_STRING (262)
    TK_PR_IF (263)
    TK_PR_THEN (264)
    TK_PR_ELSE (265)
    TK_PR_WHILE (266)
    TK_PR_DO (267)
    TK_PR_INPUT (268)
    TK_PR_OUTPUT (269)
    TK_PR_RETURN (270)
    TK_PR_CONST (271)
    TK_PR_STATIC (272)
    TK_PR_FOREACH (273)
    TK_PR_FOR (274)
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277)
    TK_PR_CONTINUE (278)
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 25
    TK_OC_GE (286) 27
    TK_OC_EQ (287) 26
    TK_OC_NE (288) 28
    TK_OC_AND (289) 30
    TK_OC_OR (290) 29
    TK_OC_SL (291)
    TK_OC_SR (292)
    TK_LIT_INT (293) 11
    TK_LIT_FLOAT (294) 10
    TK_LIT_FALSE (295) 9
    TK_LIT_TRUE (296) 8
    TK_LIT_CHAR (297) 6
    TK_LIT_STRING (298) 7
    TK_IDENTIFICADOR (299) 14 15 16
    TOKEN_ERRO (300)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    argumento (62)
        on left: 1
        on right: 0 2 3
    argumentos (63)
        on left: 2 3
        on right: 2 4
    lista_argumentos (64)
        on left: 4 5
        on right: 16
    literal (65)
        on left: 6 7 8 9 10 11
        on right: 12
    expressao (66)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 1 13 15 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31


State 0

    0 $accept: . argumento $end
    1 argumento: . expressao
    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    argumento  go to state 9
    literal    go to state 10
    expressao  go to state 11


State 1

   11 literal: TK_LIT_INT .

    $default  reduce using rule 11 (literal)


State 2

   10 literal: TK_LIT_FLOAT .

    $default  reduce using rule 10 (literal)


State 3

    9 literal: TK_LIT_FALSE .

    $default  reduce using rule 9 (literal)


State 4

    8 literal: TK_LIT_TRUE .

    $default  reduce using rule 8 (literal)


State 5

    6 literal: TK_LIT_CHAR .

    $default  reduce using rule 6 (literal)


State 6

    7 literal: TK_LIT_STRING .

    $default  reduce using rule 7 (literal)


State 7

   14 expressao: TK_IDENTIFICADOR .  [$end, TK_OC_LE, TK_OC_GE, TK_OC_EQ, TK_OC_NE, TK_OC_AND, TK_OC_OR, '+', '-', '%', '|', '&', '^', '*', '/', ',', ')', ']', '?', ':']
   15          | TK_IDENTIFICADOR . '[' expressao ']'
   16          | TK_IDENTIFICADOR . '(' lista_argumentos ')'

    '('  shift, and go to state 12
    '['  shift, and go to state 13

    $default  reduce using rule 14 (expressao)


State 8

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   13          | '(' . expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 14


State 9

    0 $accept: argumento . $end

    $end  shift, and go to state 15


State 10

   12 expressao: literal .

    $default  reduce using rule 12 (expressao)


State 11

    1 argumento: expressao .  [$end, ',', ')']
   17 expressao: expressao . '+' expressao
   18          | expressao . '-' expressao
   19          | expressao . '%' expressao
   20          | expressao . '*' expressao
   21          | expressao . '/' expressao
   22          | expressao . '|' expressao
   23          | expressao . '&' expressao
   24          | expressao . '^' expressao
   25          | expressao . TK_OC_LE expressao
   26          | expressao . TK_OC_EQ expressao
   27          | expressao . TK_OC_GE expressao
   28          | expressao . TK_OC_NE expressao
   29          | expressao . TK_OC_OR expressao
   30          | expressao . TK_OC_AND expressao
   31          | expressao . '?' expressao ':' expressao

    TK_OC_LE   shift, and go to state 16
    TK_OC_GE   shift, and go to state 17
    TK_OC_EQ   shift, and go to state 18
    TK_OC_NE   shift, and go to state 19
    TK_OC_AND  shift, and go to state 20
    TK_OC_OR   shift, and go to state 21
    '+'        shift, and go to state 22
    '-'        shift, and go to state 23
    '%'        shift, and go to state 24
    '|'        shift, and go to state 25
    '&'        shift, and go to state 26
    '^'        shift, and go to state 27
    '*'        shift, and go to state 28
    '/'        shift, and go to state 29
    '?'        shift, and go to state 30

    $default  reduce using rule 1 (argumento)


State 12

    1 argumento: . expressao
    2 argumentos: . argumento ',' argumentos
    3           | . argumento
    4 lista_argumentos: . argumentos
    5                 | . %empty  [')']
    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   16          | TK_IDENTIFICADOR '(' . lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    $default  reduce using rule 5 (lista_argumentos)

    argumento         go to state 31
    argumentos        go to state 32
    lista_argumentos  go to state 33
    literal           go to state 10
    expressao         go to state 11


State 13

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   15          | TK_IDENTIFICADOR '[' . expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 34


State 14

   13 expressao: '(' expressao . ')'
   17          | expressao . '+' expressao
   18          | expressao . '-' expressao
   19          | expressao . '%' expressao
   20          | expressao . '*' expressao
   21          | expressao . '/' expressao
   22          | expressao . '|' expressao
   23          | expressao . '&' expressao
   24          | expressao . '^' expressao
   25          | expressao . TK_OC_LE expressao
   26          | expressao . TK_OC_EQ expressao
   27          | expressao . TK_OC_GE expressao
   28          | expressao . TK_OC_NE expressao
   29          | expressao . TK_OC_OR expressao
   30          | expressao . TK_OC_AND expressao
   31          | expressao . '?' expressao ':' expressao

    TK_OC_LE   shift, and go to state 16
    TK_OC_GE   shift, and go to state 17
    TK_OC_EQ   shift, and go to state 18
    TK_OC_NE   shift, and go to state 19
    TK_OC_AND  shift, and go to state 20
    TK_OC_OR   shift, and go to state 21
    '+'        shift, and go to state 22
    '-'        shift, and go to state 23
    '%'        shift, and go to state 24
    '|'        shift, and go to state 25
    '&'        shift, and go to state 26
    '^'        shift, and go to state 27
    '*'        shift, and go to state 28
    '/'        shift, and go to state 29
    ')'        shift, and go to state 35
    '?'        shift, and go to state 30


State 15

    0 $accept: argumento $end .

    $default  accept


State 16

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   25          | expressao TK_OC_LE . expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 36


State 17

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   27          | expressao TK_OC_GE . expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 37


State 18

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   26          | expressao TK_OC_EQ . expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 38


State 19

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   28          | expressao TK_OC_NE . expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 39


State 20

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   30          | expressao TK_OC_AND . expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 40


State 21

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   29          | expressao TK_OC_OR . expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8

    literal    go to state 10
    expressao  go to state 41


State 22

    6 literal: . TK_LIT_CHAR
    7        | . TK_LIT_STRING
    8        | . TK_LIT_TRUE
    9        | . TK_LIT_FALSE
   10        | . TK_LIT_FLOAT
   11        | . TK_LIT_INT
   12 expressao: . literal
   13          | . '(' expressao ')'
   14          | . TK_IDENTIFICADOR
   15          | . TK_IDENTIFICADOR '[' expressao ']'
   16          | . TK_IDENTIFICADOR '(' lista_argumentos ')'
   17          | . expressao '+' expressao
   17          | expressao '+' . expressao
   18          | . expressao '-' expressao
   19          | . expressao '%' expressao
   20          | . expressao '*' expressao
   21          | . expressao '/' expressao
   22          | . expressao '|' expressao
   23          | . expressao '&' expressao
   24          | . expressao '^' expressao
   25          | . expressao TK_OC_LE expressao
   26          | . expressao TK_OC_EQ expressao
   27          | . expressao TK_OC_GE expressao
   28          | . expressao TK_OC_NE expressao
   29          | . expressao TK_OC_OR expressao
   30          | . expressao TK_OC_AND expressao
   31          | . expressao '?' expressao ':' expressao

    TK_LIT_INT        shift, and go to state 1
    TK_LIT_FLOAT      shift, and go to state 2
    TK_LIT_FALSE      shift, and go to state 3
    TK_LIT_TRUE       shift, and go to state 4
    TK_LIT_CHAR       shift, and go to state 5
    TK_LIT_STRING     shift, and go to state 6
    TK_IDENTIFICADOR  shift, and go to state 7
    '('               shift, and go to state 8
